# CodeLanguage

./: .gitignore  .gitmodules  README.md  history.txt
C/: explain.txt  funparry.c
C++/: explain.txt  fs.cpp  pfun.cpp  test.cpp
C++_Pro/: CMakeLists.txt
C++_Pro/BoostStudy/: CMakeLists.txt  boost_circular_buffer.cpp
C++_Pro/DesignPatterns/: CMakeLists.txt
C++_Pro/DesignPatterns/Observer/: CMakeLists.txt  Observer.cpp  Observer.h  Subject.cpp  Subject.h  main.cpp
C++_Pro/Effective C++/test_constructor/: CMakeLists.txt
C++_Pro/EffectiveC++/: CMakeLists.txt
C++_Pro/EffectiveC++/test/: CMakeLists.txt  test_copy_elision.cpp  test_default_constructor.cpp  test_forward.cpp  test_lambda.cpp  test_move_constructor.cpp  test_template_type_deduction.cpp
C++_Pro/StandardLib/: CMakeLists.txt
C++_Pro/StandardLib/test_auto/: CMakeLists.txt  test_auto.cpp
C++_Pro/StandardLib/test_smart_pointer/: CMakeLists.txt
C++_Pro/StandardLib/test_structured_bindings/lang/: structbind1.cpp  structbind1.hpp  structbind2.cpp
C++_Pro/StandardLib/test_template/: CMakeLists.txt  test_template2.cpp
C++_Pro/StandardLib/test_vector/: CMakeLists.txt  test_vector.cpp
C++_Pro/boost_study/: CMakeLists.txt  boost_thread.cpp
C++_Pro/test_auto/: CMakeLists.txt
C++_Pro/test_decltype/: CMakeLists.txt  test_decltype.cpp
C++_Pro/test_placement-new/: CMakeLists.txt  main.cpp
C++_Pro/test_smart_pointer/: CMakeLists.txt  (+2 more)
C++_Pro/test_structured_bindings/: CMakeLists.txt  test_structured_bindings.cpp
C++_Pro/test_structured_bindings/lang/: customer1.hpp  customer2.hpp  structbind2.hpp
CMake_Pro/: BuildType.cmake
CMake_Pro/test_cmake/: CMakeLists.txt  Monster.cpp  Monster.h
CUDA_Pro/other_example/CUDA-code/: CMakeLists.txt
CUDA_Pro/other_example/CUDA-code/1.1lesson/: README.md
CUDA_Pro/other_example/CUDA-code/1.2lesson/: CMakeLists.txt  test.cu
CUDA_Pro/other_example/CUDA-code/2.1lesson/: CMakeLists.txt
CUDA_Pro/other_example/CUDA-code/2.2lesson/: CMakeLists.txt
CUDA_Pro/other_example/CUDA-code/2.3lesson/: CMakeLists.txt
CUDA_Pro/other_example/CUDA-code/3.1lesson/: CMakeLists.txt
CUDA_Pro/other_example/CUDA-code/3.2lesson/: README.md
CUDA_Pro/other_example/CUDA-code/3.3lesson/: README.md
CUDA_Pro/other_example/CUDA-code/3.4lesson/: README.md
CUDA_Pro/other_example/cuda_by_example/: CMakeLists.txt
CUDA_Pro/other_example/cuda_by_example/appendix_a/: CMakeLists.txt  dot.cu
CUDA_Pro/other_example/cuda_by_example/chapter03/: CMakeLists.txt
CUDA_Pro/other_example/cuda_by_example/chapter04/: CMakeLists.txt
CUDA_Pro/other_example/cuda_by_example/chapter05/: CMakeLists.txt
CUDA_Pro/other_example/cuda_by_example/chapter06/: CMakeLists.txt
CUDA_Pro/other_example/cuda_by_example/chapter07/: CMakeLists.txt
CUDA_Pro/other_example/cuda_by_example/chapter08/: CMakeLists.txt
CUDA_Pro/other_example/cuda_by_example/chapter09/: CMakeLists.txt
CUDA_Pro/other_example/cuda_by_example/chapter10/: CMakeLists.txt
CUDA_Pro/test_helloWorld/: CMakeLists.txt
CUDA_Pro/test_matrix/: CMakeLists.txt  cudastart.h  main.cu  test
C_Pro/: CMakeLists.txt  log4c安装使用教程.md
C_Pro/LOG4C/: CMakeLists.txt  main.c
C_Pro/LOG4C/src/log4c/: appender.c  appender.h  appender_type_mmap.c  appender_type_mmap.h  appender_type_rollingfile.c  appender_type_rollingfile.h  appender_type_stream.c  appender_type_stream.h  appender_type_stream2.c  appender_type_stream2.h  appender_type_syslog.c  appender_type_syslog.h  buffer.h  category.c  category.h  init.c  init.h  layout.c  layout.h  layout_type_basic.c  layout_type_basic.h  layout_type_basic_r.c  layout_type_basic_r.h  layout_type_dated.c  layout_type_dated.h  layout_type_dated_local.c  layout_type_dated_local.h  layout_type_dated_local_r.c  layout_type_dated_local_r.h  layout_type_dated_r.c  layout_type_dated_r.h  location_info.h  log4c.h  logging_event.c  logging_event.h  priority.c  priority.h  rc.c  rc.h  rollingpolicy.c  (+5 more)
C_Pro/LOG4C/src/sd/: domnode-xml-scanner.c  domnode-xml-scanner.h  domnode.h  error.c  error.h  factory.c  factory.h  hash.c  hash.h  list.c  list.h  malloc.c  malloc.h  sd_xplatform.h  sprintf.c  sprintf.h  stack.c  stack.h  test.c  test.h
C_Pro/Melon/: CMakeLists.txt  Melon.c
C_Pro/Melon/src/: mln_conf.c  mln_file.c  mln_lang.c  mln_lang_ast.c  mln_lex.c  mln_log.c  mln_path.c  mln_tools.c
C_Pro/test_log4c/: CMakeLists.txt  test_log4c.c
Qt6_QML_Pro/: CMakeLists.txt  README.md
Qt6_QML_Pro/1.Introduction/: CMakeLists.txt
Qt6_QML_Pro/10-Dialogs/: CMakeLists.txt
Qt6_QML_Pro/11-ModelViewArchitecture/: CMakeLists.txt
Qt6_QML_Pro/11-ModelViewArchitecture/2-ListViewListModel/: Main.qml
Qt6_QML_Pro/12-TransformsTransitionsAnimations/: CMakeLists.txt
Qt6_QML_Pro/13-Networking/: CMakeLists.txt
Qt6_QML_Pro/14-Storage/: CMakeLists.txt
Qt6_QML_Pro/15-MyQCustomPlotExample/: CMakeLists.txt
Qt6_QML_Pro/15-MyQCustomPlotExample/qml/: main.qml
Qt6_QML_Pro/15-MyQCustomPlotExample/src/: CMakeLists.txt  datastreamer.cpp  datastreamer.h  main.cpp  qmlrealtimeplot.cpp  qmlrealtimeplot.h
Qt6_QML_Pro/2.DissectingQmlSyntax/: CMakeLists.txt
Qt6_QML_Pro/3.BasicElements/: CMakeLists.txt
Qt6_QML_Pro/4.CustomComponentsAndModules/: CMakeLists.txt
Qt6_QML_Pro/4.CustomComponentsAndModules/2-ComponentsInPlace/: Main.qml
Qt6_QML_Pro/5.SignalsSlots/: CMakeLists.txt
Qt6_QML_Pro/5.SignalsSlots/6-CustomSignals/: Main.qml
Qt6_QML_Pro/6.UserInput/: CMakeLists.txt
Qt6_QML_Pro/7.Javascript/: CMakeLists.txt
Qt6_QML_Pro/8-Positioning/: CMakeLists.txt
Qt6_QML_Pro/8-Positioning/7-Flow/: Main.qml
Qt6_QML_Pro/9-QtQuickControls/: CMakeLists.txt
Qt6_QML_Pro/9-QtQuickControls/10-SwipeViewPageIndicator/: Main.qml
Qt6_QML_Pro/9-QtQuickControls/11-ProgressBar/: Main.qml
Qt6_QML_Pro/9-QtQuickControls/13-FlickableScrollbar/: Main.qml
Qt6_QML_Pro/9-QtQuickControls/17-TextAreaScrollView/: Main.qml
Qt6_QML_Pro/9-QtQuickControls/18-TextFieldLabel/: Main.qml
Qt6_QML_Pro/9-QtQuickControls/19-SplitView/: Main.qml
Qt6_QML_Pro/9-QtQuickControls/5-ComboBox/: Main.qml
Qt6_QML_Pro/9-QtQuickControls/6-DelayButton/: Main.qml
(+37 files in other folders)
