cmake_minimum_required(VERSION 3.16)

project(QML_EXAMPLES VERSION 0.1 LANGUAGES CXX)
set(CMAKE_PREFIX_PATH "/opt/Qt/Qt6.6.2/6.6.2/gcc_64/")

add_subdirectory(1.Introduction)
add_subdirectory(2.DissectingQmlSyntax)
add_subdirectory(3.BasicElements)
add_subdirectory(4.CustomComponentsAndModules)
add_subdirectory(5.SignalsSlots)
add_subdirectory(6.UserInput)
add_subdirectory(7.Javascript)
add_subdirectory(8-Positioning)
add_subdirectory(9-QtQuickControls)
add_subdirectory(10-Dialogs)
add_subdirectory(11-ModelViewArchitecture)
add_subdirectory(12-TransformsTransitionsAnimations)
add_subdirectory(13-Networking)
add_subdirectory(14-Storage)
